# DataManagement

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
performance-evaluations/: numpy_vs_pandas_read_write.ipynb  performance_Analyse.ipynb  polars_vs_pandas.ipynb
src/localdataset/: dataloader.py  dataset.py  dtypes.py  fourier.py  import_data.py  tools.py
