[project]
name = "localdatasetmanagement"
version = "0.0.1"
authors = [
  { name="Markus Brücklmayr", email="markus@bruecklmayr.de" },
]
description = "Package to manage local datasets. Developed for corpuls to process corpulsAED-missions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'scipy>=1.11.3',
    'pandas',
    'numpy',
    'tqdm',
    'PyYAML',
    'zipp'
]

[project.urls]
Homepage = "https://github.com/Detecting-Simulated-Real-ECG-Signals/DataManagement"
